<resources>
    <string name="app_name">一个</string>

    <string name="toolbar_btn_home">首页</string>
    <string name="toolbar_btn_article">文章</string>
    <string name="toolbar_btn_question">问题</string>
    <string name="toolbar_btn_settings">设置</string>

    <string name="font_size_settings">字体大小</string>
    <string name="night_mode">夜间模式</string>
    <string name="version_code">版本号</string>
    <string name="copyright">版权声明</string>
    <string name="copyright_desc">复杂的世界，一个就够了。\n每天一张图片，一篇文章，一个问答，回到最初那个简洁的\"一个\"。\n本App是『ONE·一个』的非官方版本，内容属『ONE·一个』http://m.wufazhuce.com 官方所有。\n\n邮箱: taolin2107@163.com</string>

    <string name="refresh_text_prepare">右\n滑\n刷\n新</string>
    <string name="refresh_text_start">松\n开\n刷\n新</string>
    <string name="user_guide_text_top">双击此区域滑动到顶部</string>
    <string name="user_guide_text_bottom">双击此区域回到第一页</string>
    <string name="user_guide_text_done">知道了</string>
</resources>