<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/bgColor">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <FrameLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="?attr/bgColor"
        android:layout_gravity="bottom">

        <LinearLayout
            android:alpha="?attr/toolbarAlpha"
            android:background="?attr/toolbarBg"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/btn_home"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="?attr/secondTextSize"
                android:textColor="?attr/toolbarTextColor"
                android:text="@string/toolbar_btn_home"/>

            <TextView
                android:id="@+id/btn_article"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="?attr/secondTextSize"
                android:textColor="?attr/toolbarTextColor"
                android:text="@string/toolbar_btn_article"/>

            <TextView
                android:id="@+id/btn_question"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="?attr/secondTextSize"
                android:textColor="?attr/toolbarTextColor"
                android:text="@string/toolbar_btn_question"/>

            <TextView
                android:id="@+id/btn_settings"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="?attr/secondTextSize"
                android:textColor="?attr/toolbarTextColor"
                android:text="@string/toolbar_btn_settings"/>
        </LinearLayout>
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/loading_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="#ffffff">

        <ProgressBar
            android:id="@+id/loading_progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large.Inverse"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/loading_progressbar"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:textSize="18sp"
            android:text="@string/loading_text"/>
    </RelativeLayout>
</FrameLayout>
